@@ -1,15 +1,75 @@
 # Application template recipe for the rails_apps_composer. Change the recipe here:
 # https://github.com/RailsApps/rails_apps_composer/blob/master/recipes/railsapps.rb
 
-prefs[:railsapps] = multiple_choice "Install an example application?",
-  [["I want to build my own application", "none"],
-  ["membership/subscription/saas", "saas"],
-  ["rails-prelaunch-signup", "rails-prelaunch-signup"],
-  ["rails3-bootstrap-devise-cancan", "rails3-bootstrap-devise-cancan"],
-  ["rails3-devise-rspec-cucumber", "rails3-devise-rspec-cucumber"],
-  ["rails3-mongoid-devise", "rails3-mongoid-devise"],
-  ["rails3-mongoid-omniauth", "rails3-mongoid-omniauth"],
-  ["rails3-subdomains", "rails3-subdomains"]] unless prefs.has_key? :railsapps
+case Rails::VERSION::MAJOR.to_s
+when "3"
+  prefs[:railsapps] = multiple_choice "Install an example application for Rails 3.2?",
+    [["I want to build my own application", "none"],
+    ["membership/subscription/saas", "saas"],
+    ["rails-prelaunch-signup", "rails-prelaunch-signup"],
+    ["rails3-bootstrap-devise-cancan", "rails3-bootstrap-devise-cancan"],
+    ["rails3-devise-rspec-cucumber", "rails3-devise-rspec-cucumber"],
+    ["rails3-mongoid-devise", "rails3-mongoid-devise"],
+    ["rails3-mongoid-omniauth", "rails3-mongoid-omniauth"],
+    ["rails3-subdomains", "rails3-subdomains"]] unless prefs.has_key? :railsapps
+when "4"
+  prefs[:apps4] = multiple_choice "Install an example application for Rails 4.0?",
+    [["simple-test", "simple-test"],
+    ["I want to build my own application", "none"],
+    ["Build a RailsApps starter application", "railsapps"],
+    ["Build a contributed application", "contributed_app"]] unless prefs.has_key? :apps4
+  case prefs[:apps4]
+    when 'railsapps'
+      prefs[:apps4] = multiple_choice "Only one starter app is currently available.",
+        [["learn-rails", "learn-rails"]]
+    when 'contributed_app'
+      prefs[:apps4] = multiple_choice "No contributed applications are available.",
+        [["continue", "none"]]
+  end
+end
+
+case prefs[:apps4]
+  when 'simple-test'
+    prefs[:dev_webserver] = 'webrick'
+    prefs[:prod_webserver] = 'same'
+    prefs[:templates] = 'erb'
+    prefs[:git] = false
+    prefs[:github] = false
+    prefs[:database] = 'sqlite'
+    prefs[:unit_test] = false
+    prefs[:integration] = false
+    prefs[:fixtures] = false
+    prefs[:frontend] = false
+    prefs[:bootstrap] = false
+    prefs[:email] = false
+    prefs[:authentication] = false
+    prefs[:devise_modules] = false
+    prefs[:authorization] = false
+    prefs[:starter_app] = false
+    prefs[:form_builder] = false
+    prefs[:quiet_assets] = false
+    prefs[:local_env_file] = false
+    prefs[:better_errors] = false
+    prefs[:ban_spiders] = false
+    prefs[:continuous_testing] = false
+  when 'learn-rails'
+    prefs[:git] = true
+    prefs[:database] = 'sqlite'
+    prefs[:unit_test] = false
+    prefs[:integration] = false
+    prefs[:fixtures] = false
+    prefs[:frontend] = 'bootstrap'
+    prefs[:bootstrap] = 'sass'
+    prefs[:email] = 'gmail'
+    prefs[:authentication] = false
+    prefs[:devise_modules] = false
+    prefs[:authorization] = false
+    prefs[:starter_app] = false
+    prefs[:form_builder] = 'simple_form'
+    prefs[:quiet_assets] = true
+    prefs[:local_env_file] = true
+    prefs[:better_errors] = true
+end
 
 case prefs[:railsapps]
   when 'saas'
